<resources>
    <string name="app_name">CustomChat</string>
    <string name="placeholder_email">correo</string>
    <string name="placeholder_password">contraseña</string>
    <string name="sign_up_message">¿no estas registrado?</string>
    <string name="sign_up">Regístrate</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="loadingMessage">Vericando tus datos</string>
    <string name="loadingTitle">Cargando</string>
    <string name="sign_off">cerrar sesión</string>
    <string name="register_username">Nombre de usuario</string>
    <string name="register_email">correo electrónico</string>
    <string name="register_password">contraseña</string>
    <string name="register_confirm_pass">confirmar contraseña</string>
    <string name="cancel">cancelar</string>
    <string name="accept">aceptar</string>
    <string name="register_title">Registrando</string>
    <string name="empty_field_message">los campos no pueden ser vacíos</string>
    <string name="check_credentials_message">verifica tus datos</string>
    <string name="title_chat_page">Chats</string>
    <string name="title_contacts_page">Contactos</string>
    <string name="title_profile_page">Perfil</string>
    <string name="feeling_text">Me siento...</string>
    <string name="current_state_text">estado</string>
    <string name="send">enviar</string>
    <string name="loadingDataMessage">cargando tus datos</string>
    <string name="state_text">Tu estado: </string>
    <string name="no_contacts_message">no hay contactos para mostrar</string>
    <string name="no_chats_message">no hay chats para mostrar</string>
    <string name="username">cargando nombre de ususario</string>
    <string name="loadingState">Cargando su estado</string>
    <string name="welcome_message">Bienvenido a CustomChat!</string>
    <string name="editProfileImage">presiona la imagen para editar</string>
    <string name="online">Conectado</string>
    <string name="offline">Desconectado</string>
    <string name="availability_string">Disponibilidad</string>
    <string name="searh_description">ingresa el email del usuario que deseas buscar</string>
    <string name="results_string">results</string>
    <string name="goBack">volver</string>
    <string name="loading_string">Cargando</string>
    <string name="loading_contacts_message">cargando tus contactos</string>
    <string name="default_username_text">Username</string>
    <string name="add_to_contacts_text">añadir a contactos</string>
    <string name="contact_not_found_message">el contacto que buscas no está registrado</string>
    <string name="change_password_text">cambiar contraseña</string>
    <string name="single_email_text">email</string>
    <string name="view_item">ver</string>
    <string name="new_message_item">mensaje nuevo</string>
    <string name="delete_item">eliminar</string>
    <string name="delete_title">¿eliminar?</string>
    <string name="delete_message">Se borrarán tambien tus conversaciones con este contacto, esto no se puede deshacer</string>
    <string name="message_hour">hh:mm</string>
    <string name="message_content">contenido del mensaje</string>
    <string name="chat_contact_name">Contacto</string>
    <string name="type_placeholder">escribe un mensaje</string>
    <string name="select_contact_title">Selecciona un contacto</string>
    <string name="contact_name_default">Contact Name</string>
    <string name="the_new_user_message">¿eres nuevo por aquí?</string>

    <!--string-array name="availability_array">
        <item>"@string/online"</item>
        <item>"@string/offline"</item>
    </string-array-->

</resources>
