<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNoBackground">

    <TextView android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:text="@string/welcome_message"/>

    <LinearLayout android:id="@+id/actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNoBackground"
            android:textAllCaps="false"
            android:text="@string/sign_in"/>

        <TextView android:id="@+id/the_new_user_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:text="@string/the_new_user_message"/>

        <Button android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNoBackground"
            android:textAllCaps="false"
            android:text="@string/sign_up"/>
    </LinearLayout>

</RelativeLayout>