<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etStateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">
        <EditText android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feeling_text"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStateContainer"
        android:layout_centerHorizontal="true">

        <Button android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel"/>

        <Button android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

    </LinearLayout>



</RelativeLayout>