<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/regEmailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/etRegEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/regPassContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regEmailContainer">
                <EditText android:id="@+id/etRegPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/regConfirmPassContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regPassContainer">
                <EditText android:id="@+id/etRegConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/register_confirm_pass"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:id="@+id/buttonContainerRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/regConfirmPassContainer"
                android:layout_centerHorizontal="true">
                <Button android:id="@+id/btnCancelRegister"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel"/>
                <Button android:id="@+id/btnSignUp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"/>
            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
