<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNoBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView android:id="@+id/contactNameText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/contact_name_default"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:paddingBottom="20dp"
            />

        <TextView android:id="@+id/contactLastMessage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:textSize="16sp"
            />

        <EditText android:id="@+id/newMessageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:hint="@string/type_placeholder"
            android:inputType="text"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorNoBackground"
            android:text="@string/send"
            android:textColor="@color/colorAccent"
            android:stateListAnimator="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>