<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView android:id="@+id/chat_contact_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person_black_48dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               >

                <TextView android:id="@+id/chat_last_content"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/chat_contact_name"
                    android:padding="12dp"
                    android:freezesText="false"
                    android:text="@string/message_content"/>

                <TextView android:id="@+id/chat_message_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/chat_contact_name"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="6dp"
                    android:layout_gravity="end"
                    android:text="@string/message_hour"/>

                <TextView android:id="@+id/chat_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/chat_contact_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>