<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorNoBackground"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/profile_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView android:id="@+id/profile_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/contact_icon_red" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/contact_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:text="@string/default_username_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/text_username">

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorNoBackground"
                        android:padding="16dp"
                        android:text="@string/add_to_contacts_text"
                        android:textColor="@color/colorAccent"
                        android:stateListAnimator="@null"
                        android:layout_gravity="end"
                        />

                    <Button android:id="@+id/button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:stateListAnimator="@null"
                        android:background="@color/colorNoBackground"
                        android:textColor="@color/colorAccent"
                        android:text="@string/cancel"
                        android:layout_gravity="end"/>

                </LinearLayout>



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>