<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wilson.customchat.home.porfile.EditProfileActivity">

    <include android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/normalDataCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <LinearLayout android:id="@+id/edit_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="6dp">

                        <ImageView android:id="@+id/editProfileImage"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/android_contact" />

                    </android.support.v7.widget.CardView>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/editUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/register_username"/>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/editState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/current_state_text"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/passwordCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/normalDataCard"
                android:layout_margin="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="6dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/placeholder_password"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText android:id="@+id/editPassConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/register_confirm_pass"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--LinearLayout android:id="@+id/buttonsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/container_round_background">

                <ImageButton android:id="@+id/editCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:src="@drawable/ic_clear_white_36dp"
                    android:layout_margin="6dp" />

                <ImageButton android:id="@+id/editSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:src="@drawable/ic_done_white_36dp"
                    android:layout_margin="6dp"/>

            </LinearLayout-->

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
